prevent scrollbar

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -137,8 +137,6 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 40px;
 }
 
 .footer p {
